// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input feedback states ensures that the contents do not overlap the icons 1`] = `
<div
  class="sc-aXZVg fMjfal"
>
  <div>
    <div
      class="sc-aXZVg kiRGJS"
    >
      <label
        for="the-input"
      >
        <span
          class="sc-aXZVg kiRGJS sc-kAyceB chYFXr sc-kAyceB chYFXr"
        >
          <span
            class="sc-eqUAAy bxnxsp"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    css="[object Object]"
  >
    <input
      aria-invalid="false"
      class="sc-imWYAI cKXA-de"
      id="the-input"
      type="text"
    />
    <div
      class="sc-jXbUNg jPGoCt"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="sc-dhKdcB gexGqa"
        >
          <svg
            class="sc-gsFSXq kTxPxJ"
            height="1.25rem"
            role="img"
            viewBox="0 0 20 20"
            width="1.25rem"
          >
            <title>
              The value of this input field is valid.
            </title>
            <path
              d="M0 10C0 4.48 4.48 0 10 0s10 4.48 10 10-4.48 10-10 10S0 15.52 0 10zm8.127 4.673a.633.633 0 0 0 .092-.105l7.734-8.572a.693.693 0 0 0-.009-.925.595.595 0 0 0-.882-.001l-7.514 8.055-2.612-2.8a.596.596 0 0 0-.88 0 .706.706 0 0 0-.014.928l3.038 3.51a.623.623 0 0 0 .486.219.587.587 0 0 0 .46-.2l.087-.097.014-.012z"
              fill="#2B8000"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Input label can have a short hint 1`] = `
Object {
  "blur": [Function],
  "changeValueTo": [Function],
  "findFeedbackIconFade": [Function],
  "findHelper": [Function],
  "findInputElement": [Function],
  "focus": [Function],
  "input": <Input
    hint="The short hint"
    hintPosition="inline"
    id="the-id"
    label="The input"
    type="text"
  >
    <Box
      between={2}
      inline={false}
      tag="div"
    >
      <styled.div
        between={2}
        inline={false}
        tag="div"
      >
        <div
          className="sc-aXZVg fMjfal"
        >
          <div>
            <Box
              between={2}
              inline={true}
              tag="div"
            >
              <styled.div
                between={2}
                inline={true}
                tag="div"
              >
                <div
                  className="sc-aXZVg kiRGJS"
                >
                  <label
                    htmlFor="the-id"
                  >
                    <Styled(Box)
                      between={2}
                      inline={true}
                      tag="span"
                    >
                      <Box
                        between={2}
                        className="sc-kAyceB chYFXr"
                        inline={true}
                        tag="span"
                      >
                        <styled.div
                          between={2}
                          className="sc-kAyceB chYFXr"
                          inline={true}
                          tag="span"
                        >
                          <span
                            className="sc-aXZVg kiRGJS sc-kAyceB chYFXr sc-kAyceB chYFXr"
                          >
                            <Text
                              block={false}
                              bold={true}
                              invert={false}
                              size="medium"
                            >
                              <styled.span
                                block={false}
                                bold={true}
                                invert={false}
                                size="medium"
                              >
                                <span
                                  className="sc-eqUAAy bxnxsp"
                                  size="medium"
                                >
                                  The input
                                </span>
                              </styled.span>
                            </Text>
                            <Text
                              block={false}
                              bold={false}
                              invert={false}
                              size="small"
                            >
                              <styled.span
                                block={false}
                                bold={false}
                                invert={false}
                                size="small"
                              >
                                <span
                                  className="sc-eqUAAy GHYGD"
                                  size="small"
                                >
                                  The short hint
                                </span>
                              </styled.span>
                            </Text>
                          </span>
                        </styled.div>
                      </Box>
                    </Styled(Box)>
                  </label>
                </div>
              </styled.div>
            </Box>
          </div>
          <div
            css={
              Object {
                "position": "relative",
              }
            }
          >
            <styled.input
              aria-invalid={false}
              id="the-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
            >
              <input
                aria-invalid={false}
                className="sc-imWYAI ctXBnY"
                id="the-id"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                type="text"
              />
            </styled.input>
            <styled.div>
              <div
                className="sc-jXbUNg jPGoCt"
              >
                <FeedbackIcon
                  showIcon={false}
                >
                  <Fade
                    in={false}
                    mountOnEnter={true}
                    timeout={100}
                    unmountOnExit={true}
                  >
                    <Transition
                      appear={false}
                      enter={true}
                      exit={true}
                      in={false}
                      mountOnEnter={true}
                      onEnter={[Function]}
                      onEntered={[Function]}
                      onEntering={[Function]}
                      onExit={[Function]}
                      onExited={[Function]}
                      onExiting={[Function]}
                      timeout={100}
                      unmountOnExit={true}
                    />
                  </Fade>
                </FeedbackIcon>
              </div>
            </styled.div>
          </div>
        </div>
      </styled.div>
    </Box>
  </Input>,
  "label": <label
    htmlFor="the-id"
  >
    <Styled(Box)
      between={2}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="sc-kAyceB chYFXr"
        inline={true}
        tag="span"
      >
        <styled.div
          between={2}
          className="sc-kAyceB chYFXr"
          inline={true}
          tag="span"
        >
          <span
            className="sc-aXZVg kiRGJS sc-kAyceB chYFXr sc-kAyceB chYFXr"
          >
            <Text
              block={false}
              bold={true}
              invert={false}
              size="medium"
            >
              <styled.span
                block={false}
                bold={true}
                invert={false}
                size="medium"
              >
                <span
                  className="sc-eqUAAy bxnxsp"
                  size="medium"
                >
                  The input
                </span>
              </styled.span>
            </Text>
            <Text
              block={false}
              bold={false}
              invert={false}
              size="small"
            >
              <styled.span
                block={false}
                bold={false}
                invert={false}
                size="small"
              >
                <span
                  className="sc-eqUAAy GHYGD"
                  size="small"
                >
                  The short hint
                </span>
              </styled.span>
            </Text>
          </span>
        </styled.div>
      </Box>
    </Styled(Box)>
  </label>,
}
`;

exports[`Input renders 1`] = `
<div
  class="sc-aXZVg fMjfal"
>
  <div>
    <div
      class="sc-aXZVg kiRGJS"
    >
      <label
        for="the-input"
      >
        <span
          class="sc-aXZVg kiRGJS sc-kAyceB chYFXr sc-kAyceB chYFXr"
        >
          <span
            class="sc-eqUAAy bxnxsp"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    css="[object Object]"
  >
    <input
      aria-invalid="false"
      class="sc-imWYAI ctXBnY"
      id="the-input"
      type="text"
    />
    <div
      class="sc-jXbUNg jPGoCt"
    />
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="sc-aXZVg fMjfal"
>
  <div>
    <div
      class="sc-aXZVg kiRGJS"
    >
      <label
        for="the-input"
      >
        <span
          class="sc-aXZVg kiRGJS sc-kAyceB chYFXr sc-kAyceB chYFXr"
        >
          <span
            class="sc-eqUAAy bxnxsp"
          >
            The input
          </span>
        </span>
      </label>
    </div>
  </div>
  <div
    css="[object Object]"
  >
    <input
      aria-invalid="true"
      class="sc-imWYAI kvNObz"
      id="the-input"
      type="text"
    />
    <div
      class="sc-jXbUNg jPGoCt"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="sc-dhKdcB gexGqa"
        >
          <svg
            class="sc-gsFSXq kTxPxJ"
            height="1.25rem"
            role="img"
            viewBox="0 0 20 20"
            width="1.25rem"
          >
            <title>
              The value of this input field is invalid.
            </title>
            <path
              d="M0 10C0 4.48 4.48 0 10 0s10 4.48 10 10-4.48 10-10 10S0 15.52 0 10zm10 5.833a.833.833 0 1 0 0-1.666.833.833 0 0 0 0 1.666zm-.003-2.5c.354 0 .644-.306.654-.69l.182-6.912c.01-.4-.285-.731-.654-.731H9.82c-.369 0-.664.33-.654.73l.175 6.912c.01.385.3.691.655.691z"
              fill="#c12335"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
